[tool.poetry]
name = "landsatxplore"
version = "0.15.0"
description = "Search and download Landsat scenes from EarthExplorer"
authors = ["Yann Forget <yannforget@mailbox.org>", "Valerio Pampanoni <valerio.pampanoni@uniroma1.it>"]
maintainers = ["Yann Forget <yannforget@mailbox.org>", "Valerio Pampanoni <valerio.pampanoni@uniroma1.it>"]
license = "MIT"
readme = "README.md"
homepage = "https://github.com/yannforget/landsatxplore"
repository = "https://github.com/yannforget/landsatxplore"
documentation = "https://github.com/yannforget/landsatxplore"
keywords = [
    "earth observation",
    "remote sesing",
    "GIS",
    "satellite imagery",
    "landsat",
    "sentinel",
    "usgs"
]

[tool.poetry.dependencies]
python = "^3.7"
requests = "^2.20"
tqdm = "^4.58"
click = "^8.1"
shapely = "^2.0"
python-dateutil = "^2.8"

[tool.poetry.dev-dependencies]
pytest = "^6.2"
pytest-cov = "^2.11"

[tool.poetry.urls]
issues = "https://github.com/yannforget/landsatxplore/issues"

[tool.poetry.scripts]
landsatxplore = "landsatxplore.cli:cli"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 88
